--- a/action.yml
+++ b/action.yml
@@ -3,11 +3,11 @@ description: "Get started with Python Container actions"
 author: "Jacob Tomlinson"
 inputs:
   folderPath:
-    description: "Input to use e.g. /images"
+    description: "Folder path e.g. contents/images"
     default: "images"
   outputPath:
-    description: "Output path e.g. /_layouts/feed.xml"
-    default: "/_layouts/feed.xml"
+    description: "Output path e.g. _layouts/feed.xml"
+    default: "web/feed.xml"
   title:
     description: "Title of the feed"
     default: "My Feed"
