--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ inputs:
     default: "images"
   outputPath:
     description: "Output path e.g. _layouts/feed.xml"
-    default: "web/feed.xml"
+    default: "feed.xml"
   title:
     description: "Title of the feed"
     default: "My Feed"
