--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -3,6 +3,12 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
+
     steps:
       - uses: actions/checkout@master
       - name: Self test
@@ -11,6 +17,7 @@ jobs:
         # Put your action repo here
         uses: yiran-frank-mao/feedable@master
 
-      - name: Check outputs
-        run: |
-          test "${{ steps.selftest.outputs.myOutput }}" == "feed.xml"
+      - name: Commit and push
+      - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Update feed
