--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -11,13 +11,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@master
+
       - name: Self test
         id: selftest
-
         # Put your action repo here
         uses: yiran-frank-mao/feedable@master
 
       - name: Commit and push
-      - uses: stefanzweifel/git-auto-commit-action@v5
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Update feed
