--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ inputs:
   title:
     description: "Title of the feed"
     default: "My Feed"
-  description:
+  descript:
     description: "Description of the feed"
     default: "My feed description"
   baseUrl:
