--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -16,6 +16,8 @@ jobs:
         id: selftest
         # Put your action repo here
         uses: yiran-frank-mao/feedable@master
+        with:
+          directLink: "https://raw.githubusercontent.com/yiran-frank-mao/feedable/master"
 
       - name: Commit and push
         uses: stefanzweifel/git-auto-commit-action@v5
